# map_skoka

./: .dockerignore  .env-example  .gitignore  README.md  docker-compose.yml
agent/: .env-example  Dockerfile  README.md  pyproject.toml
agent/app/: config.py  main.py
agent/app/application_agent/: coordinator.py  create_graph.py  node.py  prompt.py  service.py  state.py
agent/app/broker/: consumer.py  producer.py
agent/app/core/: create_llm.py
agent/app/tools_calling_agent/: main.py  prompt.py  tools.py
backend/: .dockerignore  .env-example  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
backend/app/: config.py  exceptions.py  main.py
backend/app/applications/: consumer.py  dao.py  models.py  router.py  service.py
backend/app/conclusion/: consumer.py  dao.py  models.py  router.py  schemas.py  service.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 9bb1e384aa47_init_project.py  (+1 more)
backend/app/notification/: dao.py  models.py  schemas.py  service.py
backend/app/schemas/: base.py
backend/app/service/: base.py
backend/app/signature/: dao.py  models.py  router.py  service.py
backend/app/utils/: s3.py
bot/: .dockerignore  .env-example  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
bot/app/: commission_analyzer.py  config.py  main.py
bot/app/agent/: router.py
bot/app/applications/: callback.py  keyboard.py  router.py  service.py
bot/app/broker/: consumer.py  producer.py
bot/app/system/: router.py
bot/app/utils/: s3.py
bot/app/vk/: client.py  handlers.py  questionnaire.py  runner.py
gateway/: .env-example  docker-compose.yml  pyproject.toml  requirements.txt
gateway/app/: config.py  main.py  network.py
gateway/app/api/: api.py
gateway/app/core/: gw_route.py  utils.py
gateway/app/schemas/: applications.py  auth.py  base.py  conclusion.py  notification.py  refresh.py
notification/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
notification/app/: api.py  config.py  database.py  exceptions.py  main.py
notification/app/dao/: base.py
notification/app/migrations/: env.py
notification/app/notification/: consumer.py  dao.py  models.py  router.py  service.py
notification/app/schemas/: base.py
notification/app/utils/: get_user.py
(+72 files in other folders)
