[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "botocore>=1.42.19",
    "fastapi>=0.135.3",
    "faststream[rabbit]>=0.5.48",
    "greenlet>=3.3.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "python-docx==1.2.0",
    "passlib==1.7.4",
    "pyjwt[crypto]>=2.12.1",
]
