[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.1.3",
    "aiogram>=3.23.0",
    "faststream[rabbit]==0.5.48",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]
