[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "async-timeout==4.0.3",
    "fastapi>=0.125.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.13.0",
    "uvicorn>=0.38.0",
]
